# zephyr-fancier-blinky-stm32f3_disco

./: CMakeLists.txt  LICENSE  README.md  build-flash  init-project  prj.conf  readme.md
boards/arm/stm32f3_disco/support/: openocd.cfg
src/: main.c
